--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,11 @@
-
 services:
-  - type: worker
-    name: telegram-prompt-bot
-    env: python
-    runtime: python
-    plan: starter
-    region: oregon
-    branch: main
-    repo: https://github.com/KibermarketingAI/telegram-prompt-bot
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app/bot.py
-    pythonVersion: 3.11.8
+- type: worker
+  name: telegram-prompt-bot
+  env: python
+  plan: starter
+  repo: https://github.com/KibermarketingAI/telegram-prompt-bot
+  branch: main
+  buildCommand: "pip install -r requirements.txt"
+  startCommand: "python main.py"
+  pythonVersion: 3.11.8
+  region: oregon
